--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,12 +70,12 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 # Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   std_msgs
-   geometry_msgs
-   sensor_msgs
- )
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs
+#   geometry_msgs
+#   sensor_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -107,8 +107,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES Simple_walker_ROS
+#  INCLUDE_DIRS include
+#  LIBRARIES walker
   CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs sensor_msgs 
 #  DEPENDS system_lib
 )
@@ -147,3 +147,4 @@ include_directories(
 add_executable(walker_node src/walker_node.cpp src/botcontrol.cpp)
 
 target_link_libraries(walker_node ${catkin_LIBRARIES})
+
